--- a/TheCheeseLibrary/build.gradle
+++ b/TheCheeseLibrary/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '26.0.2'
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         minSdkVersion 15
@@ -19,8 +19,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.2.0'
-    compile 'com.squareup:otto:1.3.8'
-    compile 'com.inthecheesefactory.thecheeselibrary:adjustable-imageview:1.0.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:23.2.0'
+    implementation 'com.squareup:otto:1.3.8'
+    implementation 'com.inthecheesefactory.thecheeselibrary:adjustable-imageview:1.0.0'
 }
